--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,19 @@ dependencies:
   flutter_secure_storage: ^10.0.0
   flutter_dotenv: ^6.0.0
 
+  # UI Components
+  toastification: ^2.3.0
+  flutter_svg: ^2.0.10
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
 
   # Code generation
+  # run using: flutter pub run build_runner build --delete-conflicting-outputs
+  # or
+  # dart run build_runner build --delete-conflicting-outputs
   build_runner: ^2.10.5
   flutter_gen_runner: ^5.12.0
 
@@ -45,3 +52,13 @@ flutter:
   assets:
     - env/.env.dev
     - env/.env.prod
+    - assets/icons/
+    - assets/icons/home/
+    - assets/images/
+    - assets/images/home/
+
+flutter_gen:
+  output: lib/gen/
+  integrations:
+    flutter_svg: true
+    image: true
